// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_strong__1yf71jy3 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_13__1yf71jyu style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_danger__1yf71jy5 styles_size_medium__1yf71jye styles_undefined_compound_2__1yf71jyj style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_info__1yf71jy6 styles_size_medium__1yf71jye styles_undefined_compound_3__1yf71jyk style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_primary__1yf71jy8 styles_size_medium__1yf71jye styles_undefined_compound_0__1yf71jyh style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_secondary__1yf71jy9 styles_size_medium__1yf71jye styles_undefined_compound_1__1yf71jyi style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_success__1yf71jya styles_size_medium__1yf71jye styles_undefined_compound_4__1yf71jyl style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_warning__1yf71jyb styles_size_medium__1yf71jye styles_undefined_compound_5__1yf71jym style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_large__1yf71jyd styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_small__1yf71jyf styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionSmall__m4c9owq style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_xsmall__1yf71jyg styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_captionSmall__m4c9owq style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_disabled_true__1yf71jy1 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye style__m4c9ow0 style_prominence_weak__m4c9ow7 style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_prominence_default__1yf71jy2 styles_sentiment_neutral__1yf71jy7 styles_size_medium__1yf71jye styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
      style="--whiteSpace__qabug41: nowrap;"
    >
      <svg
        aria-hidden="true"
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
